--- a/app/globals.css
+++ b/app/globals.css
@@ -93,3 +93,11 @@ body {
   background: rgb(97, 97, 97);
   border-radius: 4px;
 }
+
+.animation-delay-300 {
+  animation-delay: 300ms;
+}
+
+.animation-delay-600 {
+  animation-delay: 600ms;
+}
